--- a/Unit-1/helloAngular/firstApp.html
+++ b/Unit-1/helloAngular/firstApp.html
@@ -2,9 +2,10 @@
 <html ng-app="firstApp">
 	<head>
 		<title></title>
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 	</head>
 	<body>
-		<div ng=controller="MyFirstController">
+<!-- 		<div ng=controller="MyFirstController">
 			<div ng-controller="MyFirstController">
 			  <h1>My name is: {{ name }}</h1>
 			  <input ng-model="name" type="text" placeholder="What is your name">
@@ -12,22 +13,25 @@
 		</div>
 		<div ng-favColor="">
 			
-		</div>
+		</div> -->
 
-		<div ng=controller="numCount">
+		<div ng-controller="numCount">
 			<h3>The number is: {{number}}</h3>
 			<button ng-click="pickRandomNumber()">Pick Random Number</button>
 		</div>
-		<div>
+
+<!-- 		<div>
 			<h2>Word Reverser</h2>
 			<input ng-model="reverseString">
 			<h4>Your word is: {{reverseString}}</h4>
 			<button>Reverse!</button>
 		</div>
 
-		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-		<script>
-    	angular.module("firstApp",[]).controller("MyFirstController", function($scope){})
-</script>
+		<div>
+			
+		</div> -->
+
+		
+		<script src="./myApp.js"></script>
 	</body>
 </html>
