--- a/Unit-1/helloAngular/madLib.html
+++ b/Unit-1/helloAngular/madLib.html
@@ -33,6 +33,8 @@
 
 	<button ng-click="boyName=''; adj='' ; pluralN=''; insect=''" >Play Again?</button>
 
+	<button ng-hide='!myValue' ng-click="boyName=''; adj='' ; pluralN=''; insect=''" >Play Again?</button>
+
 
 </body>
 </html>
