--- a/num5.html
+++ b/num5.html
@@ -17,6 +17,17 @@
 		
 	</div>
 
+	<div ng-init="duplicates=[1,1,2,5,6,9,9,9]">
+		<ul>
+			<li ng-repeat="duplicate in duplicates track by $index">
+		
+				{{duplicate}}
+		
+			</li>
+		</ul>
+		
+	</div>
+
 
 </body>
 </html>
